k8s/00-postgres-service.yaml
# This file creates the internal "network name" for the database pod.
apiVersion: v1
kind: Service
metadata:
  # This name is the DB_HOST our application services will use
  name: postgres-gke-service
spec:
  selector:
    app: postgres-gke # Points to the pod(s) from 00-postgres-deployment.yaml
  ports:
    - protocol: TCP
      port: 5432 # The standard Postgres port
      targetPort: 5432
  type: ClusterIP # Only accessible *inside* the GKE cluster
